--- a/src/components/blocks/Links/Links.scss
+++ b/src/components/blocks/Links/Links.scss
@@ -11,9 +11,9 @@
 
   &__item {
     margin: 0 16px 0 0;
-  }
 
-  &__item:last-of-type {
-    margin: 0;
+    &:last-of-type {
+      margin: 0;
+    }
   }
 }
