--- a/src/components/blocks/MessageList/MessageList.scss
+++ b/src/components/blocks/MessageList/MessageList.scss
@@ -1,5 +1,5 @@
-.contact-card-list {
-  background: var(--color-white);
+.message-list {
+  background: var(--color-background);
   list-style: none;
   margin: 0;
   padding: 0;
