Создать компонент ui Button

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -9,7 +9,7 @@
   --color-error: #DF4863;
   --color-success: #7AB671;
   --color-border: #E0E0E0;
-  --color--selected: #D7F0FF;
+  --color-selected: #D7F0FF;
 }
 
 .body {
