--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -31,6 +31,9 @@
   &__side-panel-footer {
     flex-shrink: 0;
     padding: 24px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
   }
 
   /* Окно сообщений */
@@ -48,6 +51,4 @@
     border-top: 1px solid var(--color-border);
     border-bottom: 1px solid var(--color-border);
   }
-
-
 }
