--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -14,39 +14,38 @@
   border: none;
   outline: none;
   transition: 0.15s;
-}
 
-.button:active {
-  transform: scale(0.95);
-}
-
-.button:focus {
-  box-shadow:
-    inset 0 0 0 2px var(--color-primary),
-    0 0 0 4px var(--color-selected);
-}
-
-.button:hover {
-  cursor: pointer;
-  opacity: 0.7;
-}
-
-.button_light {
-  height: 32px;
-  padding: 0;
-  border-radius: 0;
-
-}
-
-.button_light:focus {
-  box-shadow: inset 0 -2px var(--color-primary);
-}
-
-.button_primary {
-  background-color: var(--color-primary);
-  color: var(--color-white);
+  &:active {
+    transform: scale(0.95);
+  }
 
   &:focus {
-    box-shadow: 0 0 0 4px var(--color-selected);
+    box-shadow:
+      inset 0 0 0 2px var(--color-primary),
+      0 0 0 4px var(--color-selected);
+  }
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
+
+  &_light {
+    height: 32px;
+    padding: 0;
+    border-radius: 0;
+
+    &:focus {
+      box-shadow: inset 0 -2px var(--color-primary);
+    }
+  }
+
+  &_primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+
+    &:focus {
+      box-shadow: 0 0 0 4px var(--color-selected);
+    }
   }
 }
