--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -34,6 +34,7 @@
     height: 32px;
     padding: 0;
     border-radius: 0;
+    min-width: 32px;
 
     &:focus {
       box-shadow: inset 0 -2px var(--color-primary);
