--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -33,3 +33,31 @@
 button, input, textarea {
   font: inherit;
 }
+
+/* Скроллбары в WebKit */
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+  background-color: inherit;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-border);
+  background-clip: padding-box;
+  border: 4px solid transparent;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-primary);
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+* {
+  scrollbar-color: var(--color-border) transparent;
+  scrollbar-width: thin;
+}
