--- a/src/components/blocks/ContactCard/ContactCard.scss
+++ b/src/components/blocks/ContactCard/ContactCard.scss
@@ -5,6 +5,12 @@
   box-shadow: inset 0 0 0 1px var(--color-border);
   display: grid;
   grid-template-columns: min-content auto min-content;
+  transition: box-shadow 0.25s;
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: inset 0 0 0 2px var(--color-primary);
+  }
 
   &__avatar {
     margin: 0 8px 0 0;
