--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -38,11 +38,26 @@
     gap: 16px;
   }
 
+  /* Не выбран чат */
+
+  &__unselected-сhat-window {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+  }
+
+  &__unselected-сhat-message {
+    padding: 0 24px;
+    margin: 0;
+    font-size: 16px;
+  }
+
   /* Окно сообщений */
 
   &__main {
     flex-grow: 1;
-    display: flex;
+    display: none;
     flex-direction: column;
   }
 
