--- a/src/components/ui/Input/Input.scss
+++ b/src/components/ui/Input/Input.scss
@@ -1,9 +1,11 @@
 .input {
   position: relative;
+  display: block;
 
   &__field {
     box-sizing: border-box;
     width: 100%;
+    margin: 0;
     min-height: 48px;
     padding: 0 16px;
     background: var(--color-white);
@@ -12,6 +14,7 @@
     transition: box-shadow 0.25s;
     outline: none;
     border: none;
+    display: block;
   }
 
   // Фикс отступа в Safari при поле типа search
@@ -31,17 +34,18 @@
 
   &__field:not(:placeholder-shown) ~ &__label {
     position: absolute;
-    top: -21px;
+    top: -8px;
     background: var(--color-white);
     font-size: 13px;
   }
 
   &__label {
+    display: block;
     position: absolute;
     left: 12px;
-    top: 0;
+    top: 14px;
     pointer-events: none;
-    transition: .15s;
+    transition: 0.15s;
     color: var(--color-secondary);
     padding: 0 4px;
   }
