--- a/src/components/ui/Popup/Popup.scss
+++ b/src/components/ui/Popup/Popup.scss
@@ -21,14 +21,14 @@
     pointer-events: auto;
   }
 
-  .popup__card {
+  &__card {
     background-color: var(--color-white);
     border-radius: 12px;
     padding: 24px;
     box-shadow: 0 8px 48px -16px rgba(0, 0, 0, 0.25);
   }
 
-  .popup__header {
+  &__header {
     position: relative;
   }
 
@@ -38,7 +38,7 @@
     left: 0;
   }
 
-  .popup__title {
+  &__title {
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -52,7 +52,7 @@
     right: 0;
   }
 
-  .popup__body {
+  &__body {
     margin: 48px 0 0;
     display: flex;
     flex-direction: column;
