--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -29,7 +29,7 @@
     font-weight: normal;
     font-size: 24px;
     text-align: center;
-    margin: 0;
+    margin: 0 48px;
   }
 
   &__avatar-wrapper {
@@ -98,5 +98,20 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+  }
+
+  &__footer {
+    margin: 16px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__password-button {
+    color: var(--color-primary);
+  }
+
+  &__sign-out-button {
+    color: var(--color-error);
   }
 }
