--- a/src/components/blocks/Links/Links.scss
+++ b/src/components/blocks/Links/Links.scss
@@ -1,19 +1,34 @@
 .links {
-  background-color: transparent;
 
   &__list {
     margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
-    align-items: center;
   }
 
   &__item {
-    margin: 0 16px 0 0;
+    font-size: 16px;
+    margin: 0 0 8px;
 
     &:last-of-type {
       margin: 0;
     }
+
+    &:hover {
+
+    }
+  }
+
+  &__link{
+    color: var(--color-primary);
+    text-decoration: none;
+  }
+
+  &__link:hover{
+    text-decoration: underline;
+  }
+
+  &__link:visited{
+    color: #854d7d;
   }
 }
