--- a/src/components/ui/Input/Input.scss
+++ b/src/components/ui/Input/Input.scss
@@ -3,18 +3,18 @@
   display: block;
 
   &__field {
+    display: block;
     box-sizing: border-box;
     width: 100%;
-    margin: 0;
     min-height: 48px;
+    margin: 0;
     padding: 0 16px;
+    transition: box-shadow 0.25s;
+    border: none;
+    border-radius: 8px;
+    outline: none;
     background: var(--color-white);
     box-shadow: inset 0 0 0 1px var(--color-border);
-    border-radius: 8px;
-    transition: box-shadow 0.25s;
-    outline: none;
-    border: none;
-    display: block;
   }
 
   // Фикс отступа в Safari при поле типа search
@@ -33,20 +33,20 @@
   }
 
   &__field:not(:placeholder-shown) ~ &__label {
+    font-size: 13px;
     position: absolute;
     top: -8px;
     background: var(--color-white);
-    font-size: 13px;
   }
 
   &__label {
-    display: block;
     position: absolute;
-    left: 12px;
     top: 14px;
-    pointer-events: none;
-    transition: 0.15s;
-    color: var(--color-secondary);
+    left: 12px;
+    display: block;
     padding: 0 4px;
+    transition: top 0.15s, font-size 0.15s;
+    pointer-events: none;
+    color: var(--color-secondary);
   }
 }
