--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -10,18 +10,19 @@
   --color-success: #7AB671;
   --color-border: #E0E0E0;
   --color-selected: #D7F0FF;
+  --color-visited-link: #854d7d;
 }
 
 .body {
-  margin: 0;
   font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 16px;
   font-weight: normal;
   font-style: normal;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
   color: var(--color-text);
   background-color: var(--color-background);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* Хаки */
@@ -43,10 +44,10 @@ button, input, textarea {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--color-border);
-  background-clip: padding-box;
   border: 4px solid transparent;
   border-radius: 6px;
+  background-color: var(--color-border);
+  background-clip: padding-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -56,6 +57,8 @@ button, input, textarea {
 ::-webkit-scrollbar-button {
   display: none;
 }
+
+/* Скроллбары в Firefox */
 
 * {
   scrollbar-color: var(--color-border) transparent;
