--- a/src/components/ui/Popup/Popup.scss
+++ b/src/components/ui/Popup/Popup.scss
@@ -1,30 +1,30 @@
 .popup {
-  background-color: rgba(0,0,0,0.50);
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
   display: flex;
+  visibility: hidden;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.5s;
+  width: 100%;
+  height: 100%;
+  transition: 0.25s;
   pointer-events: none;
+  opacity: 0;
+  background-color: rgba(0,0,0,0.50);
 
   &_opened {
     visibility: visible;
-    opacity: 1;
-    transition: opacity 0.25s;
+    //transition: opacity 0.25s;
     pointer-events: auto;
+    opacity: 1;
   }
 
   &__card {
-    background-color: var(--color-white);
-    border-radius: 12px;
     padding: 24px;
+    border-radius: 12px;
+    background-color: var(--color-white);
     box-shadow: 0 8px 48px -16px rgba(0, 0, 0, 0.25);
   }
 
@@ -39,11 +39,11 @@
   }
 
   &__title {
-    font-style: normal;
-    font-weight: normal;
     font-size: 24px;
-    text-align: center;
+    font-weight: normal;
+    font-style: normal;
     margin: 0 48px;
+    text-align: center;
   }
 
   &__close-button {
@@ -53,8 +53,8 @@
   }
 
   &__body {
-    margin: 48px 0 0;
     display: flex;
     flex-direction: column;
+    margin: 48px 0 0;
   }
 }
