--- a/src/components/blocks/ContactCard/ContactCard.scss
+++ b/src/components/blocks/ContactCard/ContactCard.scss
@@ -1,7 +1,7 @@
 .contact-card {
   display: grid;
   padding: 8px;
-  transition: box-shadow 0.25s;
+  transition: box-shadow .25s;
   border-radius: 8px;
   background: var(--color-white);
   box-shadow: inset 0 0 0 1px var(--color-border);
