--- a/src/components/blocks/ErrorInfo/ErrorInfo.scss
+++ b/src/components/blocks/ErrorInfo/ErrorInfo.scss
@@ -7,7 +7,7 @@
   padding: 48px 24px;
   border-radius: 12px;
   background-color: var(--color-white);
-  box-shadow: 0 8px 48px -16px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 8px 48px -16px rgba(0, 0, 0, .25);
 
   &__title {
     font-size: 24px;
