--- a/src/components/ui/Input/Input.scss
+++ b/src/components/ui/Input/Input.scss
@@ -9,8 +9,8 @@
     min-height: 48px;
     margin: 0;
     padding: 0 16px;
-    transition: box-shadow 0.25s;
-    border: none;
+    transition: box-shadow .25s;
+    border: 0;
     border-radius: 8px;
     outline: none;
     background: var(--color-white);
@@ -45,7 +45,7 @@
     left: 12px;
     display: block;
     padding: 0 4px;
-    transition: top 0.15s, font-size 0.15s;
+    transition: top .15s, font-size .15s;
     pointer-events: none;
     color: var(--color-secondary);
   }
