--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -12,7 +12,7 @@
     width: 362px;
     height: 100%;
     background: var(--color-white);
-    box-shadow: 0px 8px 48px -16px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 8px 48px -16px rgba(0, 0, 0, .25);
   }
 
   &__side-panel-header {
