--- a/src/pages/password/password.scss
+++ b/src/pages/password/password.scss
@@ -11,7 +11,7 @@
     padding: 24px;
     border-radius: 12px;
     background-color: var(--color-white);
-    box-shadow: 0 8px 48px -16px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 48px -16px rgba(0, 0, 0, .25);
   }
 
   &__header {
