--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -11,7 +11,7 @@
     padding: 24px;
     border-radius: 12px;
     background-color: var(--color-white);
-    box-shadow: 0 8px 48px -16px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 48px -16px rgba(0, 0, 0, .25);
   }
 
   &__header {
@@ -44,13 +44,13 @@
     overflow: hidden;
     padding: 0;
     cursor: pointer;
-    border: none;
+    border: 0;
     border-radius: 8px;
     outline: none;
     background: transparent;
 
     &:active {
-      transform: scale(0.95);
+      transform: scale(.95);
     }
 
     &:focus {
@@ -65,8 +65,8 @@
       display: block;
       width: 100%;
       height: 100%;
-      content: '';
-      background-color: rgba(0,0,0,0.50);
+      content: "";
+      background-color: rgba(0, 0, 0, .50);
       background-image: url("../../assets/images/edit.svg");
       background-repeat: no-repeat;
       background-position: center;
