--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -10,6 +10,8 @@
   --color-success: #7ab671;
   --color-border: #e0e0e0;
   --color-selected: #d7f0ff;
+  --color-selected-success: #d9ecd6;
+  --color-selected-error: #fcd4da;
   --color-visited-link: #854d7d;
 }
 
