--- a/src/components/blocks/MessageInput/MessageInput.scss
+++ b/src/components/blocks/MessageInput/MessageInput.scss
@@ -11,6 +11,13 @@
     left: 24px;
   }
 
+  &__form {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
   &__input {
     flex-grow: 1;
   }
