Упростить архитектуру api и контроллеров

--- a/src/components/blocks/Message/Message.scss
+++ b/src/components/blocks/Message/Message.scss
@@ -3,6 +3,10 @@
   align-items: flex-end;
   gap: 8px;
 
+  &:first-of-type {
+    margin: auto 0 0;
+  }
+
   &_outgoing-message {
     flex-direction: row-reverse;
   }
