--- a/src/components/blocks/MessageList/MessageList.scss
+++ b/src/components/blocks/MessageList/MessageList.scss
@@ -5,16 +5,5 @@
   padding: 0;
   list-style: none;
   background: var(--color-background);
-
-  &__item {
-    margin: 0 0 16px;
-
-    &:first-of-type {
-      margin: auto 0 16px;
-    }
-
-    &:last-of-type {
-      margin: 0;
-    }
-  }
+  gap: 16px;
 }
