--- a/src/components/blocks/ChatCard/ChatCard.scss
+++ b/src/components/blocks/ChatCard/ChatCard.scss
@@ -12,6 +12,11 @@
     box-shadow: inset 0 0 0 2px var(--color-primary);
   }
 
+  &_active {
+    background: var(--color-selected);
+    box-shadow: none;
+  }
+
   &__avatar {
     width: 48px;
     height: 48px;
