--- a/src/components/blocks/User/User.scss
+++ b/src/components/blocks/User/User.scss
@@ -13,6 +13,11 @@
     box-shadow: inset 0 0 0 2px var(--color-primary);
   }
 
+  &_active {
+    background: var(--color-selected);
+    box-shadow: none;
+  }
+
   &__avatar {
     width: 24px;
     height: 24px;
