Рефакторинг отправки текстовых сообщений

--- a/src/components/blocks/MessageList/MessageList.scss
+++ b/src/components/blocks/MessageList/MessageList.scss
@@ -1,6 +1,6 @@
 .message-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   margin: 0;
   padding: 0;
   list-style: none;
