--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -38,51 +38,10 @@
     right: 24px;
   }
 
-  &__avatar-change-button {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    padding: 0;
-    cursor: pointer;
-    border: 0;
-    border-radius: 8px;
-    outline: none;
-    background: transparent;
-
-    &:active {
-      transform: scale(.95);
-    }
-
-    &:focus {
-      box-shadow: 0 0 0 4px var(--color-selected);
-    }
-
-    &:hover:after {
-      position: absolute;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      display: block;
-      width: 100%;
-      height: 100%;
-      content: "";
-      background-color: rgba(0, 0, 0, .50);
-      background-image: url("../../assets/images/edit.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 24px;
-    }
-  }
-
-  &__avatar {
-    display: block;
+  &__choose-avatar {
     width: 128px;
     height: 128px;
-  }
-
-  &__avatar-delete-button {
-    margin: 0 auto;
-    color: var(--color-error);
+    border-radius: 8px;
   }
 
   &__form-fields {
